syntax = "proto3";

                 package schemaMigration;
service SchemaMigrationService {
 rpc createSchemaMigration (SchemaMigrationCreateInput) returns (SchemaMigration) {}
rpc schemaMigrations (findManyParams) returns (stream SchemaMigration) {}
rpc schemaMigration (SchemaMigrationWhereUniqueInput) returns (SchemaMigration) {}
rpc updateSchemaMigration (SchemaMigrationUpdateInput) returns (SchemaMigration) {}
rpc deleteSchemaMigration (SchemaMigrationWhereUniqueInput) returns (SchemaMigration) {} 
 }
message SchemaMigrationCreateInput {
string id = 1;
};
message SchemaMigration {
string id = 1;
};
message SchemaMigrationWhereUniqueInput {
string id = 1;
};
message SchemaMigrationUpdateInput {
string id = 1;
};
message findManyParams {

};